--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Group-project</title>
 </head>
 <body>
+    <h1>helloworld1</h1>
     <script src="script.js"></script>
 </body>
 </html>
