--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h2>helloworld2</h2>
     <h2>hello1213</h2>
+    <h3>hellooo</h3>
     <script src="script.js"></script>
 </body>
 </html>
