--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Group-project</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <nav id="navbar">
+        
+    </nav>
+
     <script src="script.js"></script>
 </body>
 </html>
