--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <nav id="navbar">
-        
-    </nav>
-
+    <div id="root"></div>
     <script src="script.js"></script>
 </body>
 </html>
